@@ -30,6 +30,7 @@ ocsAppManifest := {
           sraaphorst(v),
           anunez(v),
           astephens(v),
+          osmirnova(v),
           with_remote_gogo(v),
             odbtest(v),
               gsodbtest(v),
@@ -269,16 +270,16 @@ def fnussber(version: Version) = AppConfig(
     "-XX:MaxPermSize=196M",
     "-Dedu.gemini.site=north",
     "-Dcron.*.edu.gemini.dbTools.html.ftpHost=localhost",
-    "-Dcron.*.edu.gemini.dbTools.html.ftpDestDir=/Users/osmirnov/.spdb/sftp",
+    "-Dcron.*.edu.gemini.dbTools.html.ftpDestDir=/Users/fnussberg/.spdb/sftp",
     "-Dcron.reports.edu.gemini.spdb.reports.public.host=localhost",
-    "-Dcron.reports.edu.gemini.spdb.reports.public.remotedir=/Users/osmirnov/.spdb/cron",
+    "-Dcron.reports.edu.gemini.spdb.reports.public.remotedir=/Users/fnussberg/.spdb/cron",
     "-Dcron.archive.edu.gemini.dbTools.html.ftpHost=localhost",
-    "-Dcron.archive.edu.gemini.dbTools.html.ftpDestDir=/Users/osmirnov/.spdb/cron"
+    "-Dcron.archive.edu.gemini.dbTools.html.ftpDestDir=/Users/fnussberg/.spdb/cron"
   ),
   props = Map(
     "edu.gemini.smartgcal.host"          -> "localhost",
-    "edu.gemini.spdb.dir"                -> "/Users/osmirnov/.spdb/",
-    "edu.gemini.auxfile.root"            -> "/Users/osmirnov/.auxfile",
+    "edu.gemini.spdb.dir"                -> "/Users/fnussberg/.spdb/",
+    "edu.gemini.auxfile.root"            -> "/Users/fnussberg/.auxfile",
     "edu.gemini.dataman.gsa.summit.host" -> "mkofits-lv1new.hi.gemini.edu",
     "edu.gemini.util.trpc.name"          -> "Florian's ODB (Test)",
     "edu.gemini.auxfile.fits.dest"       -> "/gemsoft/var/data/ictd/test/GS@SEMESTER@/@PROG_ID@",
@@ -409,6 +410,33 @@ def astephens(version: Version) = AppConfig(
     "edu.gemini.auxfile.fits.host"               -> "gsconfig.gemini.edu"
   )
 ) extending List(with_gogo(version), fnussber_credentials(version))
+
+// OSMIRNOVA
+def osmirnova(version: Version) = AppConfig(
+  id = "osmirnova",
+  distribution = List(TestDistro),
+  vmargs = List(
+    "-Xmx2000M",
+    "-XX:MaxPermSize=196M",
+    "-Dedu.gemini.site=north",
+    "-Dcron.*.edu.gemini.dbTools.html.ftpHost=localhost",
+    "-Dcron.*.edu.gemini.dbTools.html.ftpDestDir=/Users/osmirnov/.spdb/sftp",
+    "-Dcron.reports.edu.gemini.spdb.reports.public.host=localhost",
+    "-Dcron.reports.edu.gemini.spdb.reports.public.remotedir=/Users/osmirnov/.spdb/cron",
+    "-Dcron.archive.edu.gemini.dbTools.html.ftpHost=localhost",
+    "-Dcron.archive.edu.gemini.dbTools.html.ftpDestDir=/Users/osmirnov/.spdb/cron"
+  ),
+  props = Map(
+    "edu.gemini.smartgcal.host"          -> "localhost",
+    "edu.gemini.spdb.dir"                -> "/Users/osmirnov/.spdb/",
+    "edu.gemini.auxfile.root"            -> "/Users/osmirnov/.auxfile",
+    "edu.gemini.dataman.gsa.summit.host" -> "mkofits-lv1new.hi.gemini.edu",
+    "edu.gemini.util.trpc.name"          -> "Florian's ODB (Test)",
+    "edu.gemini.auxfile.fits.dest"       -> "/gemsoft/var/data/ictd/test/GS@SEMESTER@/@PROG_ID@",
+    "edu.gemini.auxfile.other.dest"      -> "/gemsoft/var/data/finder/GSqueue/Finders-Test/@SEMESTER@/@PROG_ID@",
+    "edu.gemini.auxfile.fits.host"       -> "gsconfig.gemini.edu"
+  )
+) extending List(with_gogo(version), olesja_credentials(version))
 
 // ODBTEST
 def odbtest(version: Version) = AppConfig(
